iOS/Csound iOS Examples/csound-iOS/headers/csound.h

    /*
     * TYPE DEFINITIONS
     */

    /*
     * Forward declarations.
     */

    typedef struct CSOUND_  CSOUND;
    typedef struct windat_  WINDAT;
    /**
     * Creates an instance of Csound.  Returns an opaque pointer that
     * must be passed to most Csound API functions.  The hostData
     * parameter can be NULL, or it can be a pointer to any sort of
     * data; this pointer can be accessed from the Csound instance
     * that is passed to callback routines.
     */
    PUBLIC CSOUND *csoundCreate(void *hostData);
    /**
     * Destroys an instance of Csound.
     */
    PUBLIC void csoundDestroy(CSOUND *);
    /**
     * Parse, and compile the given orchestra from an ASCII string,
     * also evaluating any global space code (i-time only)
     * this can be called during performance to compile a new orchestra.
     * /code
     *       char *orc = "instr 1 \n a1 rand 0dbfs/4 \n out a1 \n";
     *       csoundCompileOrc(csound, orc);
     * /endcode
    */
    PUBLIC int csoundCompileOrc(CSOUND *csound, const char *str);
    /**
     * Prepares Csound for performance after compilation
     * using one or more of the above functions.
     */
    PUBLIC int csoundStart(CSOUND *csound);
    /**
     * Senses input events, and performs one control sample worth (ksmps) of
     * audio output.
     * Note that csoundCompile() or csoundCompileOrc(), csoundReadScore(),
     * csoundStart() must be called first.
     * Returns false during performance, and true when performance is finished.
     * If called until it returns true, will perform an entire score.
     * Enables external software to control the execution of Csound,
     * and to synchronize performance with audio input and output.
     */
    PUBLIC int csoundPerformKsmps(CSOUND *);
    /**
     * Set a single csound option (flag). Returns CSOUND_SUCCESS on success.
     * NB: blank spaces are not allowed
     */
    PUBLIC int csoundSetOption(CSOUND *csound, char *option);
    /**
     * Sets an external callback for receiving notices whenever Csound opens
     * a file.  The callback is made after the file is successfully opened.
     * The following information is passed to the callback:
     *     char*  pathname of the file; either full or relative to current dir
     *     int    a file type code from the enumeration CSOUND_FILETYPES
     *     int    1 if Csound is writing the file, 0 if reading
     *     int    1 if a temporary file that Csound will delete; 0 if not
     *
     * Pass NULL to disable the callback.
     * This callback is retained after a csoundReset() call.
     */
    PUBLIC void csoundSetFileOpenCallback(CSOUND *p,
            void (*func)(CSOUND*, const char*, int, int, int));
    /**
     * Sets a function to be called by Csound for performing real-time
     * audio playback.
     */
    PUBLIC void csoundSetRtplayCallback(CSOUND *,
            void (*rtplay__)(CSOUND *,
                    const MYFLT *outBuf, int nbytes));
    /**
     * Sets a function to be called by Csound for closing real-time
     * audio playback and recording.
     */
    PUBLIC void csoundSetRtcloseCallback(CSOUND *, void (*rtclose__)(CSOUND *));
    /** @}*/
    /** @defgroup SCOREHANDLING Score Handling
     *
     *  @{ */

    /**
     *  Read, preprocess, and load a score from an ASCII string
     *  It can be called repeatedly, with the new score events
     *  being added to the currently scheduled ones.
     */
    PUBLIC int csoundReadScore(CSOUND *csound, char *str);
    /**
     * Sets an external callback for Cscore processing.
     * Pass NULL to reset to the internal cscore() function
     * (which does nothing).
     * This callback is retained after a csoundReset() call.
     */
    PUBLIC void csoundSetCscoreCallback(CSOUND *,
            void (*cscoreCallback_)(CSOUND *));
    PUBLIC void csoundSetDefaultMessageCallback(
            void (*csoundMessageCallback_)(CSOUND *,
                    int attr,
                    const char *format,
                    va_list valist));
    /**
     * Sets a function to be called by Csound to print an informational message.
     */
    PUBLIC void csoundSetMessageCallback(CSOUND *,
            void (*csoundMessageCallback_)(CSOUND *,
                    int attr,
                    const char *format,
                    va_list valist));
    /**
     * sets the value of control channel identified by *name
     */
    PUBLIC void csoundSetControlChannel(CSOUND *csound,
                                        const char *name, MYFLT val);
    /**
     * Register a function to be called once in every control period
     * by sensevents(). Any number of functions may be registered,
     * and will be called in the order of registration.
     * The callback function takes two arguments: the Csound instance
     * pointer, and the userData pointer as passed to this function.
     * This facility can be used to ensure a function is called synchronously
     * before every csound control buffer processing. It is important
     * to make sure no blocking operations are performed in the callback.
     * The callbacks are cleared on csoundCleanup().
     * Returns zero on success.
     */
    PUBLIC int csoundRegisterSenseEventCallback(CSOUND *,
            void (*func)(CSOUND *, void *),
            void *userData);
    /**
     * Called by external software to set Csound's MakeGraph function.
     */
    PUBLIC void csoundSetMakeGraphCallback(CSOUND *,
            void (*makeGraphCallback_)(CSOUND *,
                    WINDAT *windat,
                    const char *name));
    /**
     * Called by external software to set Csound's DrawGraph function.
     */
    PUBLIC void csoundSetDrawGraphCallback(CSOUND *,
            void (*drawGraphCallback_)(CSOUND *,
                    WINDAT *windat));
    /**
     * Called by external software to set Csound's KillGraph function.
     */
    PUBLIC void csoundSetKillGraphCallback(CSOUND *,
            void (*killGraphCallback_)(CSOUND *,
                    WINDAT *windat));
    /**
     * Control values are specified by a 'channelName' string.
     * Note that the 'invalue' & 'outvalue' channels can be specified by
     * either a string or a number.  If a number is specified, it will be
     * converted to a string before making the callbacks to the external
     * software.
     */

    /**
     * Called by external software to set a function for Csound to
     * fetch input control values.  The 'invalue' opcodes will
     * directly call this function. If 'channelName' starts with a
     * '$', then 'invalue' opcode is expecting a C string, to be copied
     * to 'value', with maximum size csoundGetChannelDatasize().
     */
    PUBLIC void csoundSetInputValueCallback(CSOUND *,
            void (*inputValueCalback_)(CSOUND *,
                    const char *channelName,
                    MYFLT *value));
    /**
     * Called by external software to set a function for Csound to
     * send output control values.  The 'outvalue' opcodes will
     * directly call this function.  If 'channelName' starts with a
     * '$', then the 'outvalue' opcode is sending a string appended
     * to channelName in the format: "$channelName$stringOutput".
     * and 'value' will be the index number into 'channelName' where
     * the stringOutput begins.
     */
    PUBLIC void csoundSetOutputValueCallback(CSOUND *,
            void (*outputValueCalback_)(CSOUND *,
                    const char *channelName,
                    MYFLT value));